--- a/src/components/showcase/showcase.css
+++ b/src/components/showcase/showcase.css
@@ -10,6 +10,7 @@
     align-items: center;
     font-size: 3rem;
     font-weight: 600;
+    overflow: hidden;
 }
 
 .showcase div p:first-child {
